SERVER-7768 aggregate command should ignore options that start with $